# tibber-optimizer

./: .gitignore  Cargo.toml  config.yaml  repository.json  run.sh
tibber-optimizer/: Dockerfile  README.md  config.example.yaml  config.yaml
tibber-optimizer/src/: config.rs  main.rs  mqtt.rs  optimizer.rs  tibber.rs
