[package]
name = "tibber-optimizer"
version = "0.1.0"
edition = "2021"
description = "Home Assistant addon for Tibber price-based battery optimization"
authors = ["Gert-Jaap Glasbergen"]

[dependencies]
tokio = { version = "1.34", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rumqttc = "0.23"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
strip = true
